base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  selector:
    matchLabels:
      app:  nginx-web
  template:
    metadata:
      labels:
        app:  nginx-web
    spec:
      containers:
        - name:  nginx-web
          image:  iimage-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
