base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-example
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
