base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web-route
spec:
  to:
    kind: Service
    name: web-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
